# macro_sentinel

./: .gitignore  Cargo.toml  Makefile  README.md
src/: ai.rs  config.rs  error.rs  fred.rs  indicators.rs  main.rs  routes.rs  state.rs  websocket.rs
static/: index.html  indicators.html
